--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -2,8 +2,7 @@
   "manifest_version": 3,
   "name": "PhoneBurner Dial Session Companion",
   "version": "0.3.0",
-  "description": "Launch PhoneBurner dial sessions directly from CRM lists and automatically follow calls in real time. Supports multiple CRMs with advanced Level 3 HubSpot integration and optimized Level 2 support for Pipedrive.",
-
+  "description": "Launch PhoneBurner dial sessions from CRM lists and follow calls in real time. Includes advanced HubSpot support.",
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
